--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,19 @@ body{
 	color:black;
 	margin-top:20px; }
 	
+/**********Contact*/
+.first-contact, .second-contact{
+    text-align: center;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+}
+#phone{
+    height: 30px;
+    width:30px;
+    margin-right: 30px;
+}
+
 
 /*PC*/
 @media(max-width:1281px){
@@ -149,9 +162,9 @@ body{
 		margin:0px;}
 
 	.navbar-brand{
-		display:none ;
+		display:block ;
 		position: relative;
-		left:50% ;
+    }
 	
 	
 	}#hr{width: 100% ;
@@ -166,12 +179,4 @@ body{
 	.nav-link .nav-item { 
 		font-size: 50px ;}
 			
-	
-	
- 
-
-
-
-
-
- 
+    }
